# req

./: .gitignore  .gitlab-ci.yml  .mcp.json  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  SKILL.md
.cargo/: config.toml
.req/: .gitignore  config.toml
req_cli/: Cargo.toml  config.toml
req_cli/src/: cli.rs  hooks.rs  lib.rs  main.rs  output.rs
req_engine/: Cargo.toml
req_engine/src/: ai_import.rs  cache.rs  config.rs  engine.rs  error.rs  lib.rs  parser.rs  provenance.rs  scanner.rs  trace.rs
req_engine/src/adapter/: json.rs  markdown.rs  mod.rs  reqif.rs
req_engine/src/audit/: coverage_map.rs  independence.rs  mod.rs  mutation.rs  triviality.rs
req_lib/: Cargo.toml
req_lib/src/: audit.rs  lib.rs  models.rs
req_mcp/: Cargo.toml
req_mcp/src/: error.rs  lib.rs  main.rs  server.rs
requirements/hlr/: HLR-0001.md  HLR-0002.md  HLR-0003.md  HLR-0004.md  HLR-0005.md  HLR-0006.md  HLR-0007.md  HLR-0008.md  HLR-0009.md  HLR-0010.md  HLR-0011.md  HLR-0012.md  HLR-0013.md  HLR-0014.md  HLR-0015.md  HLR-0016.md
requirements/llr/: LLR-0001.md  LLR-0002.md  LLR-0003.md  LLR-0004.md  LLR-0005.md  LLR-0006.md  LLR-0007.md  LLR-0008.md  LLR-0009.md  LLR-0010.md  LLR-0011.md  LLR-0012.md  LLR-0013.md  LLR-0014.md  LLR-0015.md  LLR-0016.md  LLR-0017.md  LLR-0018.md  LLR-0019.md  LLR-0020.md  LLR-0021.md  LLR-0022.md  LLR-0023.md  LLR-0024.md  LLR-0025.md  LLR-0026.md  LLR-0027.md  LLR-0028.md  LLR-0029.md  LLR-0030.md  LLR-0031.md  LLR-0032.md  LLR-0033.md  LLR-0034.md  LLR-0035.md  LLR-0036.md  LLR-0037.md  LLR-0123.md
requirements/tst/: TST-0001.md  TST-0002.md  TST-0003.md  TST-0004.md  TST-0005.md  TST-0006.md  TST-0007.md  TST-0008.md  TST-0009.md  TST-0010.md  TST-0011.md  TST-0012.md  TST-0013.md  TST-0014.md  TST-0015.md  TST-0016.md  TST-0017.md  TST-0018.md  TST-0019.md  TST-0020.md  TST-0021.md  TST-0022.md  TST-0023.md  TST-0024.md  TST-0025.md  TST-0026.md  TST-0027.md  TST-0028.md  TST-0029.md  TST-0030.md  TST-0031.md  TST-0032.md  TST-0033.md  TST-0034.md  TST-0035.md  TST-0036.md  TST-0037.md  TST-0038.md  TST-0039.md  TST-0040.md
src/: main.rs
tests/: ai_import_tests.rs  arch_tests.rs  audit_tests.rs  cache_tests.rs  cli_tests.rs  config_tests.rs  coverage_integration_tests.rs  coverage_report_tests.rs  coverage_tests.rs  determinism_tests.rs  export_tests.rs  incremental_scan_tests.rs  lock_tests.rs  markdown_tests.rs  mcp_tests.rs  migrate_tests.rs  models_tests.rs  placeholder_tests.rs  remove_tests.rs  reqif_tests.rs  scanner_tests.rs  staleness_tests.rs  trace_tests.rs
tests/fixtures/: sample.reqif
tests/fixtures/coverage_fixture/: Cargo.toml
tests/fixtures/coverage_fixture/src/: lib.rs
