[package]
name = "req_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "req"
path = "src/main.rs"

[dependencies]
# Engine — all business logic
req_engine = { path = "../req_engine" }

# CLI argument parsing
clap = { version = "4", features = ["derive", "color", "suggestions"] }

# Serialization (for output formatting)
serde_json = "1"
serde_yaml = "0.9"

# Terminal output
colored = "3.1"
indicatif = "0.18"

# Error handling
anyhow = "1.0"

[features]
default = []
reqif = ["req_engine/reqif"]
