[package]
name = "req_mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "req-mcp-server"
path = "src/main.rs"

[dependencies]
# Engine — all business logic
req_engine = { path = "../req_engine" }

# MCP server runtime (official Rust SDK for Model Context Protocol)
rmcp = { version = "1.2", features = ["server", "macros"] }

# Async runtime (required by rmcp stdio transport)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1.0"

# JSON Schema generation for MCP tool input types (required by rmcp macros)
schemars = "1.0"
